# psv-register

./: Cargo.toml  flake.nix
backend/: user_mail.tpl
backend/migrations/2023-01-21-095329_init/: up.sql
backend/src/: archer.rs  main.rs  models.rs  schema.rs
common/src/: class.rs  target_face.rs
frontend/: index.html
frontend/src/: main.rs
post_process/: Cargo.toml
post_process/src/: main.rs  models.rs  schema.rs  zmi.rs
