[package]
name = "post-process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.0.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
serde = {version = "1.0", features = ["derive"]}
csv = "1.3.0"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
clap = { version = "4.1.1", features = ["derive"] }
